--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <figure class="header__logo">
+            <img src="./assets/img/logo.png" alt="Logo" class="header__img">
+        </figure>
+        <nav>
+            <ul class="menu__list">
+                <li class="menu__links"><a href="index.html" class="menu__link">Página inicial</a></li>
+                <li class="menu__links"><a href="index.html" class="menu__link">Sobre nós</a></li>
+                <li class="menu__links"><a href="index.html" class="menu__link">Cães</a></li>
+                <li class="menu__links"><a href="index.html" class="menu__link">Gatos</a></li>
+                <li class="menu__links"><a href="index.html" class="menu__link">Pássaros</a></li>
+            </ul>
+        </nav>
+    </header>
+    <footer class="footer">
+        <img src="./assets/img/footer-logo.png" alt="Footer logo" class="footer__logo">
+        <p class="footer__txt">2021 Gatito Blog. All rights reserved.</p>
+    </footer>
 </body>
 </html>
