--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header class="header">
+    <header class="header__menu">
         <figure class="header__logo">
             <img src="./assets/img/logo.png" alt="Logo" class="header__img">
         </figure>
-        <nav>
+        <nav class="header__menu menu">
             <ul class="menu__list">
                 <li class="menu__links"><a href="index.html" class="menu__link">Página inicial</a></li>
                 <li class="menu__links"><a href="index.html" class="menu__link">Sobre nós</a></li>
