criando e estilizando conteúdo principal da página

--- a/index.html
+++ b/index.html
@@ -23,6 +23,32 @@
             </ul>
         </nav>
     </header>
+
+    <main class="main">
+        <div class="main__content">
+            <article class="main__post">
+                <a href="#" class="main__title">Cuidados com os animais durante a quarentena</a>
+                <div class="main__subtitle">
+                    <p class="main__date">20/08/2020</p>
+                    <span class="main__tag">Cães</span>
+                </div>
+                <div class="main__datails">
+                    <img src="assets/img/dog.jpg" alt="Cachorro" class="main__img">
+                    <p class="main__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla bibendum magna quis elit consectetur, nec laoreet ex rutrum. Cras ultrices ex et aliquam efficitur. Nam vitae suscipit orci, at dignissim purus</p>
+                    <a href="#" class="main__btn">Ler mais</a>
+                    <div class="main__info">
+                        <div class="main__author">
+                            <p class="main__p">by Alura</p>
+                        </div>
+                        <div class="main__comments">
+                            <a href="#" class="main__a">2 comentário</a>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </div>
+    </main>
+
     <footer class="footer">
         <img src="./assets/img/footer-logo.png" alt="Footer logo" class="footer__logo">
         <p class="footer__txt">2021 Gatito Blog. All rights reserved.</p>
