criando página about e injetando variaveis com interpolação

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header class="header__menu">
+    <header class="header">
         <figure class="header__logo">
             <img src="./assets/img/logo.png" alt="Logo" class="header__img">
         </figure>
         <nav class="header__menu menu">
             <ul class="menu__list">
                 <li class="menu__links"><a href="index.html" class="menu__link">Página inicial</a></li>
-                <li class="menu__links"><a href="index.html" class="menu__link">Sobre nós</a></li>
+                <li class="menu__links"><a href="about.html" class="menu__link">Sobre nós</a></li>
                 <li class="menu__links"><a href="index.html" class="menu__link">Cães</a></li>
                 <li class="menu__links"><a href="index.html" class="menu__link">Gatos</a></li>
                 <li class="menu__links"><a href="index.html" class="menu__link">Pássaros</a></li>
