adicionando sidebar à homepage e estilizando com pacleholder

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
             <img src="./assets/img/dog-cat.jpg" alt="Dog and cat" class="about__img">
             <p class="about__intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla bibendum magna quis elit consectetur, nec laoreet ex rutrum. Cras ultrices ex et aliquam efficitur. Nam vitae suscipit orci, at dignissim purus</p>
             <div class="about__split">
-                <img src="./assets/img/about.png" alt="Gatito" class="about__img2">
+                <img src="./assets/img/about.png" alt="Gatito" class="about__img-description">
                 <div class="about__txt">
                     <p class="about__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla bibendum magna quis elit consectetur, nec laoreet ex rutrum. Cras ultrices ex et aliquam efficitur. Nam vitae suscipit orci, at dignissim purus</p>
                     <p class="about__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla bibendum magna quis elit consectetur, nec laoreet ex rutrum. Cras ultrices ex et aliquam efficitur. Nam vitae suscipit orci, at dignissim purus</p>
