--- a/index.html
+++ b/index.html
@@ -47,6 +47,34 @@
                 </div>
             </article>
         </div>
+        <div class="main__sidebar sidebar">
+            <aside class="sidebar__top">
+                <p class="sidebar__title">Top posts</p>
+                <ul class="sidebar__posts">
+                    <li class="sidebar__list">
+                        <img src="./assets/img/cat.jpg" alt="Gato" class="sidebar__img">
+                        <div class="sidebar__details">
+                            <a href="article.htmml" class="sidebar__post-title">Adotar um gato: tudo o que você precisa saber</a>
+                            <p class="sidebar__post-date">15/08/2020</p>
+                        </div>
+                    </li>
+                    <li class="sidebar__list">
+                        <img src="./assets/img/pc.jpg" alt="Gato" class="sidebar__img">
+                        <div class="sidebar__details">
+                            <a href="article.htmml" class="sidebar__post-title">cuidados com seu pet durante a pandemia</a>
+                            <p class="sidebar__post-date">23/07/2020</p>
+                        </div>
+                    </li>
+                    <li class="sidebar__list">
+                        <img src="./assets/img/sun.jpg" alt="Gato" class="sidebar__img">
+                        <div class="sidebar__details">
+                            <a href="article.htmml" class="sidebar__post-title">Lojas com acessórios para pets</a>
+                            <p class="sidebar__post-date">05/07/2020</p>
+                        </div>
+                    </li>
+                </ul>
+            </aside>
+        </div>
     </main>
 
     <footer class="footer">
