--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main class="main">
         <div class="main__content">
             <article class="main__post">
-                <a href="#" class="main__title">Cuidados com os animais durante a quarentena</a>
+                <a href="article.html" class="main__title">Cuidados com os animais durante a quarentena</a>
                 <div class="main__subtitle">
                     <p class="main__date">20/08/2020</p>
                     <span class="main__tag">Cães</span>
@@ -54,21 +54,21 @@
                     <li class="sidebar__list">
                         <img src="./assets/img/cat.jpg" alt="Gato" class="sidebar__img">
                         <div class="sidebar__details">
-                            <a href="article.htmml" class="sidebar__post-title">Adotar um gato: tudo o que você precisa saber</a>
+                            <a href="article.html" class="sidebar__post-title">Adotar um gato: tudo o que você precisa saber</a>
                             <p class="sidebar__post-date">15/08/2020</p>
                         </div>
                     </li>
                     <li class="sidebar__list">
                         <img src="./assets/img/pc.jpg" alt="Gato" class="sidebar__img">
                         <div class="sidebar__details">
-                            <a href="article.htmml" class="sidebar__post-title">cuidados com seu pet durante a pandemia</a>
+                            <a href="article.html" class="sidebar__post-title">cuidados com seu pet durante a pandemia</a>
                             <p class="sidebar__post-date">23/07/2020</p>
                         </div>
                     </li>
                     <li class="sidebar__list">
                         <img src="./assets/img/sun.jpg" alt="Gato" class="sidebar__img">
                         <div class="sidebar__details">
-                            <a href="article.htmml" class="sidebar__post-title">Lojas com acessórios para pets</a>
+                            <a href="article.html" class="sidebar__post-title">Lojas com acessórios para pets</a>
                             <p class="sidebar__post-date">05/07/2020</p>
                         </div>
                     </li>
