--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li class="menu__links"><a href="collection.html" class="menu__link">Cães</a></li>
                 <li class="menu__links"><a href="collection.html" class="menu__link">Gatos</a></li>
                 <li class="menu__links"><a href="collection.html" class="menu__link">Pássaros</a></li>
+                <li class="menu__links"><a href="./contact.html" class="menu__link">Contato</a></li>
             </ul>
         </nav>
     </header>
